add React.createElement like API

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="./mui-ripple.css" rel="stylesheet">
 	<link href="./mui-input.css" rel="stylesheet">
 	<link href="./pulse-on-change.css" rel="stylesheet">
+	<link href="./createElement-usage.css" rel="stylesheet">
 	<title>Web Frontend Tricks by Eric Fortis</title>
 	<style>
 		:root {
@@ -137,6 +138,14 @@
 <pre id="rel-noopener.js"></pre>
 
 
+<h2 id="-react-like-createElement">React.createElement like API</h2>
+<pre id="createElement.js"></pre>
+<p>
+	<a href="https://github.com/ericfortis/web-tricks/blob/main/createElement-usage.js">createElement-usage.js</a>
+</p>
+<div id="ReactCreateElementExample"></div>
+
+
 <h2 id="-feature-detection">Feature Detection</h2>
 <pre id="feature-detection.js"></pre>
 
@@ -255,6 +264,8 @@
 	})
 </script>
 <script src="play-note.js"></script>
+<script src="createElement.js"></script>
+<script src="createElement-usage.js"></script>
 <script src="email-deobfuscator.js"></script>
 <script src="pulse-on-change.js"></script>
 <script crossorigin="anonymous" integrity="sha512-yUUc0qWm2rhM7X0EFe82LNnv2moqArj5nro/w1bi05A09hRVeIZbN6jlMoyu0+4I/Bu4Ck/85JQIU82T82M28w==" referrerpolicy="no-referrer" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
