--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
 
 <h2 id="-form-data-to-json">Form Data to JSON</h2>
 <pre id="form-data-to-json.js"></pre>
+<p>
+	See also, <a href="https://github.com/uxtely/js-utils/blob/main/fetchWithRetry.js">fetchWithRetry</a>
+</p>
 
-
-<h2 id="-fetch-with-retry">Fetch with Retry</h2>
-<pre id="fetch-with-retry.js"></pre>
 
 
 <h2 id="-more">More…</h2>
