move createElement to uxtely js-utils

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<link href="./mui-ripple.css" rel="stylesheet">
 	<link href="./mui-input.css" rel="stylesheet">
 	<link href="./pulse-on-change.css" rel="stylesheet">
-	<link href="./createElement-usage.css" rel="stylesheet">
 	<title>Web Frontend Tricks by Eric Fortis</title>
 	<style>
 		:root {
@@ -138,13 +137,6 @@
 <pre id="rel-noopener.js"></pre>
 
 
-<h2 id="-react-like-createElement">React.createElement like API</h2>
-<pre id="createElement.js"></pre>
-<p>
-	<a href="https://github.com/ericfortis/web-tricks/blob/main/createElement-usage.js">createElement-usage.js</a>
-</p>
-<div id="ReactCreateElementExample"></div>
-
 
 <h2 id="-form-data-to-json">Form Data to JSON</h2>
 <pre id="form-data-to-json.js"></pre>
@@ -157,6 +149,9 @@
 <ul>
 	<li>
 		<a href="https://ericfortis.github.io/web-animations/" target="_blank">Web Animations</a>
+	</li>
+	<li>
+		<a href="https://github.com/uxtely/js-utils" target="_blank">JavaScript Utils</a>
 	</li>
 	<li>
 		<a href="https://blog.uidrafter.com" target="_blank">Blog Posts</a>
@@ -259,8 +254,6 @@
 	})
 </script>
 <script src="play-note.js"></script>
-<script src="createElement.js"></script>
-<script src="createElement-usage.js"></script>
 <script src="email-deobfuscator.js"></script>
 <script src="pulse-on-change.js"></script>
 <script crossorigin="anonymous" integrity="sha512-yUUc0qWm2rhM7X0EFe82LNnv2moqArj5nro/w1bi05A09hRVeIZbN6jlMoyu0+4I/Bu4Ck/85JQIU82T82M28w==" referrerpolicy="no-referrer" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
