--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <h2 id="-form-data-to-json">Form Data to JSON</h2>
 <pre id="form-data-to-json.js"></pre>
 <p>
-	See also, <a href="https://github.com/uxtely/js-utils/blob/main/fetchWithRetry.js">fetchWithRetry</a>
+	See also, <a href="https://github.com/uxtely/js-utils/blob/main/fetch-with-retry.js">fetch-with-retry.js</a>
 </p>
 
 
