input text -> number

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
 
 <h2 id="-pulse-on-change">Pulse on change</h2>
-<input size="3" type="text" id="numA" value="1" />&nbsp;+
-<input size="3" type="text" id="numB" value="2" />&nbsp;&nbsp;&nbsp;=
+<input type="number" id="numA" value="1" />&nbsp;+
+<input type="number" id="numB" value="2" />&nbsp;&nbsp;&nbsp;=
 <output for="numA numB" id="outputAB">3</output>
 <pre id="pulse-on-change.css"></pre>
 <pre id="pulse-on-change.js"></pre>
