hover demo simplify

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <button autofocus class="ripple" type="button">Focus</button>
 <pre id="mui-ripple.css"></pre>
 
-<h2 id="-css-hover-out">CSS-only Hover (Out, In, In-Out) Transitions</h2>
+<h2 id="-css-hover-out">Hover (Out, In, In-Out) Transitions</h2>
 <ul class="HoverDemo">
 	<li class="itemA">Item A (Hover Out)</li>
 	<li class="itemB">Item B (Hover In)</li>
