--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/atom-one-light.min.css" integrity="sha512-o5v54Kh5PH0dgnf9ei0L+vMRsbm5fvIvnR/XkrZZjN4mqdaeH7PW66tumBoQVIaKNVrLCZiBEfHzRY4JJSMK/Q==" referrerpolicy="no-referrer" rel="stylesheet" />
 	<link href="./mui-ripple.css" rel="stylesheet">
 	<link href="./mui-input.css" rel="stylesheet">
-	<link href="hover.css" rel="stylesheet">
+	<link href="./pulse-on-change.css" rel="stylesheet">
+	<link href="./hover.css" rel="stylesheet">
 	<title>Web Frontend Tricks by Eric Fortis</title>
 	<style>
 		:root {
