--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 		}
 
 		button {
-			padding: 8px;
+			padding: 8px 20px;
 			color: white;
 			background: var(--accent);
-			border-radius: 6px;
+			border-radius: 40px;
 			cursor: pointer;
 		}
 		button:active {
@@ -112,6 +112,10 @@
 <pre id="pulse-on-change.css"></pre>
 <pre id="pulse-on-change.js"></pre>
 
+
+<h2 id="-sleep">Sleep</h2>
+<pre id="sleep.js"></pre>
+<textarea cols="70" rows="2"></textarea>
 
 <h2 id="-css-mui-input-animation">CSS-only Material UI Input Animation</h2>
 <input class="muiInput" placeholder="Click me" />
@@ -264,6 +268,7 @@
 		}
 	})
 </script>
+<script src="sleep.js"></script>
 <script src="play-note.js"></script>
 <script src="email-deobfuscator.js"></script>
 <script src="pulse-on-change.js"></script>
