--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 		<a href="https://github.com/uxtely/js-utils" target="_blank">JavaScript Utils</a>
 	</li>
 	<li>
-		<a href="https://blog.uidrafter.com" target="_blank">Blog Posts</a>
+		<a href="https://blog.uxtly.com" target="_blank">Blog Posts</a>
 	</li>
 </ul>
 
